--- a/src/pages/userPage/ActiveMembership/PlastDegree/FormAddPlastDegree.module.css
+++ b/src/pages/userPage/ActiveMembership/PlastDegree/FormAddPlastDegree.module.css
@@ -6,23 +6,23 @@
   }
   
   .selectField {
-    float: right;
-    text-align: left;
-    max-width: 320px;
-    min-width: 320px;
+    float: center;
+    text-align: center;
+    max-width: 470px;
+    min-width: 470px;
   }
   
   
   .formField {
     width: 100%;
+   
   }
 
   .cardButton{
-    float: right;
-    inline-size: -webkit-fill-available;
+
+    float: center;
     margin-top: 7px;
-    color:#3c5438;
     border-color: #3c5438;
-    max-width: 320px;
-    min-width: 320px;
+    max-width: 470px;
+    min-width: 470px;
   }
