ended educators staff client

--- a/src/pages/KadraVykhovnykiv/Table.module.css
+++ b/src/pages/KadraVykhovnykiv/Table.module.css
@@ -6,3 +6,9 @@
   .searchInput{
       width: 200px;
   }
+
+
+  .menu {
+    box-shadow: 0 4px 5px 3px rgba(0, 0, 0, 0.2) !important;
+    position: absolute;
+  }
