Added full responsive to all pages

--- a/src/pages/City/AddDocumentModal/AddDocumentModal.less
+++ b/src/pages/City/AddDocumentModal/AddDocumentModal.less
@@ -9,6 +9,12 @@
 
     .cancelConfirmButtons {
         margin-bottom: 0px;
+
+        @media (max-width: 575px) {
+            .publishButton {
+                text-align: end;
+            }
+        }
     }
 
     .cardButton {
