--- a/src/pages/Club/Club/Club.module.css
+++ b/src/pages/Club/Club/Club.module.css
@@ -54,6 +54,10 @@
   flex-direction: column;
   text-align: center;
 }
+.listItem :hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
 .listItem p {
   margin-bottom: 0;
 }
@@ -73,4 +77,33 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+.approveIcon {
+  color: #3c5438;
+  position: absolute;
+  bottom: 55px;
+  right: 5px;
+  font-size: 22px;
+}
+.approveIcon :hover {
+  color: #536150;
+  font-size: 28px;
+}
+.detailsCard {
+  margin: 15px;
+  width: 242px;
+  text-align: center;
+}
+.clubMember :hover{
+  cursor: pointer;
+}
+.backButton {
+  width: 180px;
+  background-color: #3c5438;
+  color: white;
+}
+.wrapper {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
