Changed EventUser page, added drawers

--- a/src/pages/userPage/Approvers/Approvers.less
+++ b/src/pages/userPage/Approvers/Approvers.less
@@ -52,7 +52,7 @@
 }
 .approversContent{
     width:  calc(60% - 30px);
-    height: auto;
+    height: calc(81vh - 64px);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -64,22 +64,6 @@
 
 .approversContent:hover{
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-.spaceWrapper{
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 999;
-    background-color: white;
-}
-.loader{
-    position: fixed !important;
-    top: 50%;
-    left: 50%;
-    transform:translateX(-50%) ;
-    
 }
 
 .line {
