--- a/src/pages/Actions/ActionEvent/EventUser/EventUser.module.css
+++ b/src/pages/Actions/ActionEvent/EventUser/EventUser.module.css
@@ -155,26 +155,13 @@
     text-align: center;
 }
 
-.spaceWrapper {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 999;
-    background-color: white;
+.modalContent{
+    text-align: center;
+    margin-bottom: 5px;
 }
 
-.loader {
-    position: fixed !important;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.roles{
-    justify-content: center;
-    display: flex;
+.eventTag{
+    margin-bottom: 8px;
 }
 
 h1 {
