--- a/src/pages/userPage/EditUserPage/EditUserPage.module.css
+++ b/src/pages/userPage/EditUserPage/EditUserPage.module.css
@@ -140,9 +140,9 @@ input,
  }
 
 .spaceWrapper{
-    position: fixed;
+    /* position: fixed;
     width: 100%;
-    height: 100%;
+    height: 100%; */
     top: 0;
     left: 0;
     z-index: 999;
