--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -2,9 +2,9 @@
     width: 100%;
 }
 .spaceWrapper{
-    position: fixed;
-    width: 100%;
-    height: 100%;
+    // position: fixed;
+    // width: 100%;
+    // height: 100%;
     top: 0;
     left: 0;
     z-index: 999;
@@ -86,6 +86,7 @@
     flex-direction: column;
     padding: 0 40px 10px;
     background-color: rgb(240, 245, 240);
+    min-height: calc(100vh - 64px - 40px);
 }
 
 .dataInput{
@@ -128,70 +129,6 @@
        padding: 10px;
    }
 }
-
-// @media(max-width: 1174px){
-//     .mainContainer{
-//         padding: 0 10px;
-//         width: 900px;
-//     }
-// }
-// @media(max-width: 1000px){
-//     .mainContainer{
-//         padding: 0;
-//         width: 700px;
-//     }
-//     .rowBlock{
-//         display: contents;
-//     }
-// }
-// @media(max-width: 768px){
-//     .rowBlock{
-//         display: contents;
-//     }
-// }
-// @media(max-width: 700px){
-//     .formContainer{
-//         display: contents;
-//     }
-//     .allFields{
-//         width: 270px;
-//     }
-//     .avatarWrapper{
-//         margin-left: 100px;
-//     }
-//     .allFields{
-//         margin-left: 100px;
-//     }
-//     .mainContainer{
-//         padding: 0;
-//         width: 500px;
-//     }
-// }
-// @media(max-width: 586px){
-//     .mainContainer{
-//         padding: 0;
-//         width: 400px;
-//     }
-// }
-
-// @media(max-width: 500px){
-//     .formContainer{
-//         display: contents;
-//     }
-//     .allFields{
-//         width: 270px;
-//     }
-//     .avatarWrapper{
-//         margin-left: 0px;
-//     }
-//     .allFields{
-//         margin-left: 0px;
-//     }
-//     .mainContainer{
-//         padding: 0;
-//         width: 300px;
-//     }
-// }
 
 .img{
     width: 300px;
