--- a/src/pages/City/CreateCity/CreateCity.less
+++ b/src/pages/City/CreateCity/CreateCity.less
@@ -2,7 +2,8 @@
   .createCityCard {
     width: 80%;
     margin: 0 auto;
-
+    cursor: default;
+    
     .ant-upload {
       font-size: 18px;
       margin: 0 auto;
