updated educators staff

--- a/src/pages/KadraVykhovnykiv/Table.module.css
+++ b/src/pages/KadraVykhovnykiv/Table.module.css
@@ -12,3 +12,9 @@
     box-shadow: 0 4px 5px 3px rgba(0, 0, 0, 0.2) !important;
     position: absolute;
   }
+
+  @media (max-width: 800px){
+    .table{
+      overflow-x: scroll;
+    }
+  }
