--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -174,6 +174,23 @@
     font-size: 1.5em;
 }
 
+.edustaffWrapper{
+    display: inline;
+   
+}
+
 .edustaffPhoto{
     display: inline;
+   max-width: 100px;
+    max-height: 40px;
+    
+}
+
+
+@media(max-width:320px){
+    .edustaffPhotoResponsive{
+    max-width: 50px;
+    max-height: 20px;
+
+    }
 }
