--- a/src/pages/userPage/personalData/PersonalData.less
+++ b/src/pages/userPage/personalData/PersonalData.less
@@ -183,7 +183,10 @@
     display: inline;
    max-width: 100px;
     max-height: 40px;
-    
+}
+
+.edustaffAllPhotos{
+    text-align: center;
 }
 
 
