--- a/src/pages/City/AddAdministratorModal/AddAdministrationModal.less
+++ b/src/pages/City/AddAdministratorModal/AddAdministrationModal.less
@@ -1,4 +1,8 @@
 .addAdministrationModal {
+  .adminTypeFormItem {
+    margin-bottom: 12px;
+  }
+
   .ant-form-horizontal .ant-form-item-label {
     padding: 0;
   }
