--- a/src/pages/Distinction/DistinctionTable/Table.module.css
+++ b/src/pages/Distinction/DistinctionTable/Table.module.css
@@ -3,6 +3,11 @@
     margin-bottom: 15px;
   }
   
+  @media (max-width: 784px){
+    .table{
+        overflow-x: scroll;
+      }
+    }
   /* Search container */
   
   .searchContainer {
@@ -33,3 +38,4 @@
     display:flex;
      justify-content:space-between
   }
+
