--- a/src/pages/Actions/ActionEvent/EventCalendar/EventCalendar.module.css
+++ b/src/pages/Actions/ActionEvent/EventCalendar/EventCalendar.module.css
@@ -51,3 +51,7 @@
 .eventHover:hover {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
+
+.title{
+    max-width: 100%;
+}
