--- a/src/pages/City/City/City.less
+++ b/src/pages/City/City/City.less
@@ -88,6 +88,14 @@ h4.ant-typography {
             .cityInfoIcon {
                 font-size: 28px;
             }
+            .cityInfoIconDelete{
+                font-size: 28px;
+                color: #910202;
+            }
+            .cityInfoIconDelete :hover{
+                color: #690606;
+                cursor: pointer;
+            }
 
             @media (max-width: 575px) {
                 .cityIcons {
