--- a/src/pages/userPage/Approvers/Approvers.less
+++ b/src/pages/userPage/Approvers/Approvers.less
@@ -46,6 +46,10 @@
 }
 .avatar{
     height: 168px;
+    
+}
+.avatarEmpty{
+    margin:0 0 20px 0;
 }
 .avatarEmpty:hover{
     box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
