--- a/src/pages/Distinction/DistinctionTable/Table.module.css
+++ b/src/pages/Distinction/DistinctionTable/Table.module.css
@@ -2,8 +2,11 @@
     text-align: center;
     margin-bottom: 15px;
   }
-  
-  @media (max-width: 784px){
+  .table{
+    width: auto;
+    height: auto;
+  }
+  @media (max-width: 1350px){
     .table{
         overflow-x: scroll;
       }
