Fixed cityAdmin, added search for cities and other

--- a/src/pages/City/City/City.less
+++ b/src/pages/City/City/City.less
@@ -23,6 +23,7 @@ h4.ant-typography {
             .cityLogo {
                 width: 100%;
                 height: auto;
+                max-height: 360px;
             }
             
             .mainMap {
