--- a/src/pages/Actions/ActionEvent/EventUser/EventUser.module.css
+++ b/src/pages/Actions/ActionEvent/EventUser/EventUser.module.css
@@ -34,12 +34,13 @@
 }
 
 .button {
-    margin-top: 30px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     background: #3C5438;
     justify-content: center;
     color: white;
     border: none;
-    width: 138px;
+    width: 100%;
     height: 40px;
     outline: none;
     text-align: center;
