--- a/src/pages/userPage/ActiveMembership/ActiveMembership.module.css
+++ b/src/pages/userPage/ActiveMembership/ActiveMembership.module.css
@@ -49,7 +49,7 @@
 .wrapper4:hover,
 .wrapper5:hover,
 .wrapperPlastDegree:hover,
-.wrapperImg:hover {
+.avatarWrapper:hover {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
@@ -58,7 +58,7 @@
 .wrapper4,
 .wrapper5,
 .wrapperPlastDegree,
-.wrapperImg {
+.avatarWrapper {
     box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
