--- a/src/pages/userPage/Blanks/Blanks.module.css
+++ b/src/pages/userPage/Blanks/Blanks.module.css
@@ -108,6 +108,16 @@
 .wrapper3,
 .wrapper4,
 .wrapper5,
+.wrapper6,
+.wrapperImg {
+    box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+}
+
+.wrapper2,
+.wrapper3,
+.wrapper4,
+.wrapper5,
 .wrapper6 {
     margin: 0px 0px 20px 20px;
 }
