--- a/src/pages/userPage/ActiveMembership/ActiveMembership.module.css
+++ b/src/pages/userPage/ActiveMembership/ActiveMembership.module.css
@@ -12,52 +12,48 @@
 .wrapper2,
 .wrapper3 {
     width: 400px;
-    height: 250px;
+    min-width: 250px;
+    min-height: 250px;
     box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
+    align-items: center;
+}
+
+.textBlock {
+    padding: 10px 10px 10px;
+    align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: left;
-    padding-top: 20px;
 }
+
+.wrapperScrollDegree{
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+    padding: 20px 0px;
+    box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
+}
+
 .wrapperPlastDegree{
-    width: 900px;
+    width: 820px;
     height: auto;
     min-height: 200px;
     max-height: 700px;
-    box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
     display: flex;
     flex-direction: column;
     align-items: normal;
     text-align: center;
-    padding: 20px 0px;
-}
-.wrapper4,
-.wrapper5 {
-    width: calc(50% - 30px);
-    height: 250px;
-    box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding-top: 20px;
 }
 
 .wrapper2:hover,
 .wrapper3:hover,
-.wrapper4:hover,
-.wrapper5:hover,
-.wrapperPlastDegree:hover,
+.wrapperScrollDegree:hover,
 .avatarWrapper:hover {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .wrapper2,
 .wrapper3,
-.wrapper4,
-.wrapper5,
-.wrapperPlastDegree,
+.wrapperScrollDegree,
 .avatarWrapper {
     box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
@@ -65,9 +61,7 @@
 
 .wrapper2,
 .wrapper3,
-.wrapper4,
-.wrapperPlastDegree,
-.wrapper5 {
+.wrapperScrollDegree {
     margin: 0px 0px 20px 20px;
 }
 
@@ -83,45 +77,64 @@
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
 
-@media(max-width: 768px){
+@media (min-width: 768px) and (max-width: 1048px){
+    .wrapper2,
+    .wrapper3,
+    .wrapperScrollDegree {
+        margin: 0px 0px 20px 10px;
+    }
+    .avatarWrapper{
+        width:  calc(50% - 30px) !important;
+        padding-top:5px;
+        padding-bottom: 5px;
+    }
+    .wrapper2,
+    .wrapper3 {
+        min-width: 160px;
+        min-height: 250px;
+    }
+    .textBlock {
+        padding: 10px 10px 10px;
+    }
+    .wrapperCol {
+        display: flex;
+        flex-direction: column;
+        width: 60%;
+        margin-left: 10px;
+    }
+    .date::after{
+        content: "\A";
+        white-space: pre;
+    }
+    .wrapper {
+        width: 99%;
+    }
+}
+@media (max-width: 767px) {
+
     .avatarWrapper{
         width: 100% !important;
         padding-top:5px;
         padding-bottom: 5px;
     }
-}
-
-.wrapperImg {
-    width:  calc(60% - 30px);
-    height: 521px;
-    box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-@media (max-width: 767px) {
     .wrapper {
         flex-direction: column;
     }
-    .wrapperImg {
-        width: 100%;
-        padding: 0;
-        margin: 0 0 10px;
-        text-align: center;
+    .wrapper2,
+    .wrapper3 {
+        min-width: 160px;
+        min-height: 240px;
     }
     .wrapperCol,
     .wrapper2,
     .wrapper3,
-    .wrapper4,
-    .wrapper5 {
+    .wrapperScrollDegree {
         width: 100%;
         margin: 0;
     }
     .wrapper2,
     .wrapper3,
-    .wrapper4,
-    .wrapper5 {
+    .wrapperScrollDegree {
         margin: 10px 0;
     }
 }
@@ -214,7 +227,7 @@
 .textGeneralInfo
 {
     text-align : left;
-    margin-left : 20px;
+    margin-left : 0px;
     margin-right: auto;
     margin-top: 5px;
     font-size : 16px;
@@ -232,88 +245,7 @@
     align-self: center;
 }
 
-#button {
-    align-items: center;
-    margin: 10px auto;
-    display: inline-block;
-    margin: 10px 0 0 65px;
-    flex-grow: 1;
-}
-
-.sectionTitle {
-    text-align: center;
-}
-
-.spaceWrapper {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 999;
-    background-color: white;
-}
-
-.loader {
-    position: fixed !important;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-h1 {
-    color: rgba(0, 0, 0, 0.65);
-    font-weight: 600;
-    font-size: 21px;
-    margin: 10px 0 0 0;
-    display: flex;
-    justify-content: center;
-}
-
 .icon{
     display: flex;
     justify-content: center;
-}
-
-h2 {
-    color: rgba(0, 0, 0, 0.65);
-    font-weight: 400;
-    font-size: 15px;
-    display: flex;
-    justify-content: center;
-}
-
-@media (max-width: 767px) {
-    .wrapper {
-        flex-direction: column;
-    }
-    .wrapperImg {
-        width: 100%;
-        padding: 0;
-        margin: 0 0 10px;
-        text-align: center;
-    }
-    .wrapperCol,
-    .wrapper2,
-    .wrapper3,
-    .wrapper4,
-    .wrapper5 {
-        width: 100%;
-        margin: 0;
-    }
-    .wrapper2,
-    .wrapper3,
-    .wrapper4,
-    .wrapper5 {
-        margin: 10px 0;
-    }
-}
-
-
-
-
-.buttonmargins{
-    margin-top: 15px;
-    margin-bottom: 15px;
-    width:100%
 }
