--- a/src/pages/userPage/ActiveMembership/ActiveMembership.module.css
+++ b/src/pages/userPage/ActiveMembership/ActiveMembership.module.css
@@ -31,10 +31,13 @@
     white-space: nowrap;
     padding: 20px 0px;
     box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
+    width: 100%;
+    max-width: 820px;
 }
 
 .wrapperPlastDegree{
-    width: 820px;
+    min-width: 650px;
+    max-width: 820px;
     height: auto;
     min-height: 200px;
     max-height: 700px;
