--- a/src/pages/Distinction/DistinctionTable/FormEdit.module.css
+++ b/src/pages/Distinction/DistinctionTable/FormEdit.module.css
@@ -6,14 +6,6 @@
   color: #536150;
   cursor: pointer;
 }
-.addIcon {
-    font-size: 36px;
-    color:#3c5438;
-}
-.addIcon :hover{
-    color: #536150;
-    cursor: pointer;
-}
 .deleteIcon {
     font-size: 24px;
     color: #910202;
@@ -21,9 +13,6 @@
 .deleteIcon :hover{
     color: #690606;
     cursor: pointer;
-}
-.addIcon {
-    font-size: 40px;
 }
 .editDiv{
     display: flex;
@@ -45,5 +34,19 @@
       width: 100%
   }
 
+  @media (max-width: 490px){
+    .list{
+    font-size: 12px;
+    }
+    .editIcon {
+        font-size: 18px;
+        color:#3c5438;
+      }
+    .deleteIcon {
+        font-size: 18px;
+        color: #910202;
+    }
+
+  }
 
 
