--- a/src/pages/userPage/Blanks/Blanks.module.css
+++ b/src/pages/userPage/Blanks/Blanks.module.css
@@ -133,7 +133,16 @@
     margin: 0px 0px 20px 20px;
 }
 
-@media (max-width: 767px) {
+@media(max-width: 1150px){
+    .deleteIcon{
+margin-left: 0px;
+    }
+    .downloadIcon{
+        margin-right: 0px;
+    }
+}
+
+@media (max-width: 768px) {
     .wrapper {
         flex-direction: column;
     }
