--- a/src/pages/Regions/Region.less
+++ b/src/pages/Regions/Region.less
@@ -5,6 +5,19 @@ h4.ant-typography {
     color: #3c5438;
 }
 
+
+
+.link{
+    color: blue;
+}
+
+
+.regionDesc{
+    font-weight: bold;
+    margin-top: 15px;
+}
+
+
 .cityProfile {
     .ant-card-body {
         padding-top: 10px;
@@ -182,10 +195,12 @@ h4.ant-typography {
             }
         }
     }
+
     
     .backButton {
         width: 180px;
         background-color: #3c5438;
         color: white;
     }
+
 }
