--- a/src/pages/userPage/Blanks/Blanks.module.css
+++ b/src/pages/userPage/Blanks/Blanks.module.css
@@ -19,7 +19,7 @@
 }
 .wrapperImg {
     width:  calc(100% - 30px);
-    height: 791px;
+    height: 521px;
     box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
     display: flex;
     flex-direction: column;
@@ -32,7 +32,7 @@
 }
 
 .deleteIcon{
-    margin-left: 20px;
+    margin-left: 10px;
     font-size: 28px;
     color: #910202;
 }
@@ -47,6 +47,11 @@
 .downloadIcon:hover{
     cursor: pointer;
    color: #273625
+}
+.reviewIcon{
+    margin-left: 10px;
+    font-size: 28px; 
+    color: #3C5438
 }
 
 .wrapper2,
@@ -99,6 +104,7 @@
     height: 40px;
 }
 .listButton{
+    width : 157px;
     background:#3c5438;
     color: white;
     top: 15px;
@@ -133,16 +139,7 @@
     margin: 0px 0px 20px 20px;
 }
 
-@media(max-width: 1150px){
-    .deleteIcon{
-margin-left: 0px;
-    }
-    .downloadIcon{
-        margin-right: 0px;
-    }
-}
-
-@media (max-width: 768px) {
+@media (max-width: 791px) {
     .wrapper {
         flex-direction: column;
     }
