--- a/src/pages/userPage/ActiveMembership/ActiveMembership.module.css
+++ b/src/pages/userPage/ActiveMembership/ActiveMembership.module.css
@@ -13,9 +13,10 @@
 .wrapper3 {
     width: 400px;
     min-width: 250px;
-    min-height: 250px;
+    min-height: 265px;
     box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
     align-items: center;
+    padding-top: 15px;
 }
 
 .textBlock {
