Clubs conflicts resolved

--- a/src/pages/Club/CreateClub/CreateClub.less
+++ b/src/pages/Club/CreateClub/CreateClub.less
@@ -9,7 +9,7 @@
         margin: 0 auto;
         float: none;
   
-        .ClubLogo {
+        .clubLogo {
           width: 350px;
         }
       }
@@ -18,7 +18,7 @@
         padding: 0;
       }
   
-      .ClubButtons {
+      .clubButtons {
         text-align: center;
   
         .ant-btn-primary {
@@ -27,7 +27,7 @@
       }
     }
   
-    .ClubMembersCard {
+    .clubMembersCard {
       width: 80%;
       margin: 40px auto 0;
   
@@ -43,12 +43,12 @@
         .ant-upload {
           width: 100%;
   
-          .ClubLogo {
+          .clubLogo {
             width: 100%;
           }
         }
   
-        .ClubButtons {
+        .clubButtons {
           text-align: center;
   
           .ant-btn-primary {
