Added chance to see planed number of participants.

--- a/src/pages/Actions/ActionEvent/EventUser/EventUser.module.css
+++ b/src/pages/Actions/ActionEvent/EventUser/EventUser.module.css
@@ -94,7 +94,7 @@
     justify-content: center;
     color: white;
     border: none;
-    width: 49%;
+    width: 200px;
     height: 40px;
     outline: none;
     text-align: center;
