--- a/src/pages/DecisionTable/FormEditDecision.module.css
+++ b/src/pages/DecisionTable/FormEditDecision.module.css
@@ -4,5 +4,12 @@
   }
   .inputWidth
   {
+
+    text-align: right;
     min-width: 420px ;
+  }
+  .input
+  {
+    float: right;
+    width: 320px !important;
   }
