--- a/src/pages/ForgotPassword/ForgotPassword.module.css
+++ b/src/pages/ForgotPassword/ForgotPassword.module.css
@@ -7,7 +7,7 @@
     vertical-align: middle;
     margin-top: 45px;
     width: 500px;
-    height: 250px;
+    height: 280px;
     box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
     display: flex;
@@ -55,7 +55,8 @@
     width:100%;
     height:40px;
     margin-bottom: 20px;
-    text-align: center;    
+    text-align: center; 
+    padding-top: 6px;   
 }
 
 @media(max-width: 700px){
