--- a/src/pages/KadraVykhovnykiv/Table.module.css
+++ b/src/pages/KadraVykhovnykiv/Table.module.css
@@ -3,17 +3,46 @@
     margin-bottom: 15px;
   }
 
-  .searchInput{
-    width: 200px;
-    }
-    
-  @media (max-width: 395px){
-    .searchInput{
-    width: 100%;
-    }
+  .searchContainer {
+    display: flex;
+    align-items: baseline;
+    margin-bottom: 12px;
+    width: 425px;
+    margin-left: auto; 
+  }
+  .searchContainer>input{
+    max-width: 300px;
+    margin-left: auto; 
   }
 
+  .cardButton{
+    inline-size: -webkit-fill-available;
+    margin-top: 7px;
+    color:#3c5438;
+    border-color: #3c5438;
+  }
+  .searchContainer>* {
+    margin-left: 12px;
+  }
+  
+  /* Context menu right click */
+  @media(max-width: 800px){
+    .searchContainer{
+      width: 100%;
+      flex-direction: column;
+      
+    }
+    .searchContainer>input{
+      max-width: 100%;
+      margin-left: auto; 
+    }
+    .searchContainer>button{
+      width: 100%;
+      margin-bottom: 10px;
+      margin-left: auto; 
 
+    }
+  }
  
 .link{
   color: blue;
@@ -40,12 +69,3 @@
     }
   }
 
-  @media (max-width: 395px){
-    .addKadraButton{
-    width: 100%;
-    }
-  }
-
-  .addKadraButton{
-    float: right;
-  }
