--- a/src/pages/UserTable/Filter.less
+++ b/src/pages/UserTable/Filter.less
@@ -1,9 +1,7 @@
 .ant-dropdown-menu-item {
-  color: rgb(47, 68, 44);
+  color: white;
 }
-.ant-table-filter-dropdown {
-  background-color: white;
-}
-.ant-dropdown-menu {
-  background-color: white;
+
+.ant-dropdown-menu-item-selected {
+  background-color: inherit;
 }
