--- a/src/pages/Distinction/DistinctionTable/Table.module.css
+++ b/src/pages/Distinction/DistinctionTable/Table.module.css
@@ -33,16 +33,12 @@
       flex-direction: column;
       
     }
-    .searchContainer>input{
-      max-width: 100%;
-      margin-left: auto; 
-    }
-    .searchContainer>button{
+    .searchContainer>*{
       width: 100%;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
       margin-left: auto; 
-
     }
+
   }
   .menu {
     box-shadow: 0 4px 5px 3px rgba(0, 0, 0, 0.2) !important;
