--- a/src/pages/KadraVykhovnykiv/Form.module.css
+++ b/src/pages/KadraVykhovnykiv/Form.module.css
@@ -1,6 +1,8 @@
 .cardButton {
   display: flex;
   width: 100%;
+  justify-content:flex-end;
+  float: right;
 }
 .cardButton>* {
 margin-right: 8px;
@@ -24,4 +26,8 @@ margin-right: 8px;
   max-width: 100%;
   min-width: 100%;
 }
+}
+.buttons{
+  margin-right: 0px !important;
+  margin-left: 7px;
 }
