--- a/src/pages/DecisionTable/FormAddDecision.module.css
+++ b/src/pages/DecisionTable/FormAddDecision.module.css
@@ -7,7 +7,7 @@ margin-right: 8px;
 } 
 .formField {
   max-width: 370px;
-  min-width: 370px;
+  /* min-width: 370px; */
 }
 
 .selectField {
@@ -27,5 +27,6 @@ margin-right: 8px;
 }
 .buttons
   {
-    margin: 3.5px;
+    margin-left: 7px;
+    margin-right: 0px;
   }
