fix placeholders alignment

--- a/src/pages/SignIn/SignIn.less
+++ b/src/pages/SignIn/SignIn.less
@@ -1,8 +1,10 @@
+#SignInForm
+{
 .ant-input-affix-wrapper
 {
     padding-left: 0px !important;
 }
-
+}
 #SignInForm_Password
 {
    padding-left: 11px !important; 
