--- a/src/pages/UserTable/UserTable.module.css
+++ b/src/pages/UserTable/UserTable.module.css
@@ -2,15 +2,21 @@
   box-shadow: 0 4px 5px 3px rgba(0, 0, 0, 0.2) !important;
   position: absolute;
 }
+.searchContainer {
+  margin-bottom: 12px;
+  width: 300px;
+  margin-left: auto; 
+}
+.searchContainer>input{
+  width: 300px;
+  margin-left: auto; 
+}
 
 @media (max-width: 767px) {
   .table {
     overflow-x: scroll;
   }
-}
-
-.searchContainer {
-  margin-bottom: 12px;
-  width: 200px;
-  margin-left: auto;
+  .searchContainer{
+    width: 100%;
+  }
 }
