--- a/src/pages/userPage/EditUserPage/EditUserPage.module.css
+++ b/src/pages/userPage/EditUserPage/EditUserPage.module.css
@@ -60,7 +60,7 @@
 
 .dataInput{
     border: 0 !important;
-    padding: 5px 0 5px 7px;
+    padding: 5px 0 5px 11px;
     font-size: 17px;
     box-shadow: 0 0 0 !important;
     background-color: white;
@@ -69,6 +69,21 @@
 }
 
 .dataInput>div{
+    border: 0 !important;
+    box-shadow: 0 0 0 !important;
+}
+
+.dataInputSelect{
+    border: 0 !important;
+    padding: 5px 0 5px 0;
+    font-size: 17px;
+    box-shadow: 0 0 0 !important;
+    background-color: white;
+    width: 100% !important;
+    display: block;
+}
+
+.dataInputSelect>div{
     border: 0 !important;
     box-shadow: 0 0 0 !important;
 }
