--- a/src/pages/Actions/ActionEvent/EventUser/EventUser.module.css
+++ b/src/pages/Actions/ActionEvent/EventUser/EventUser.module.css
@@ -1,6 +1,5 @@
 .wrapper {
     display: flex;
-    align-items: flex-start;
     justify-content: space-between;
     width: 100%;
 }
@@ -147,21 +146,11 @@
 }
 
 .wrapper2,
-.wrapper3 {
-    width: calc(50% - 30px);
-    height: 250px;
-    box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding-top: 20px;
-}
-
+.wrapper3,
 .wrapper4,
 .wrapper5 {
     width: calc(50% - 30px);
-    height: 250px;
+    min-height: 280px;
     box-shadow: 0 0 9px 1px rgba(0, 0, 0, .25);
     display: flex;
     flex-direction: column;
