--- a/src/pages/userPage/ActiveMembership/ActiveMembership.module.css
+++ b/src/pages/userPage/ActiveMembership/ActiveMembership.module.css
@@ -81,6 +81,26 @@
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
 
+@media (min-width: 875px) and (max-width: 1480px){
+    .date::after{
+        content: "\A";
+        white-space: pre;
+    }
+}
+
+@media (max-width: 875px){
+    /* .date::after{
+        content: "\A";
+        white-space: pre;
+    } */
+    .textListItem
+    {
+        padding: 6px 0px;
+        float: none;
+    }
+}
+
+
 @media (min-width: 768px) and (max-width: 1048px){
     .wrapper2,
     .wrapper3,
@@ -105,10 +125,6 @@
         flex-direction: column;
         width: 60%;
         margin-left: 10px;
-    }
-    .date::after{
-        content: "\A";
-        white-space: pre;
     }
     .wrapper {
         width: 99%;
@@ -160,8 +176,11 @@
 .textListItem
 {
     font-size : 16px;
-    padding: 6px 0;
+    padding: 6px 10px;
+    float: left;
 }
+
+
 
 .buttonChange {
     margin-top: 10px;
