Changed chart and table

--- a/src/pages/Statistics/StatisticsCities.less
+++ b/src/pages/Statistics/StatisticsCities.less
@@ -1,3 +1,13 @@
+.chart {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  width: 90%;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-left: 20px;
+  margin-right: auto;
+  padding: 10px;
+}
+
 .form {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   width: 90%;
@@ -5,4 +15,21 @@
   margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
+  padding: 10px;
+}
+
+.formAndChart {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+}
+.background {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  background-color: rgb(240, 245, 240) !important;
+  width: 100%;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  padding: 10px;
+  border-bottom: 1px solid #dee2e6;
 }
