--- a/src/pages/userPage/EditUserPage/EditUserPage.module.css
+++ b/src/pages/userPage/EditUserPage/EditUserPage.module.css
@@ -35,8 +35,8 @@
 }
 
  .changeAvatar{
-    display: flex;
-    flex-direction: column;
+    display: inline-flexbox;
+    flex-direction: row;
     align-items: center;
     margin-top: 20px;
 }
@@ -155,9 +155,6 @@ input,
  }
 
 .spaceWrapper{
-    /* position: fixed;
-    width: 100%;
-    height: 100%; */
     top: 0;
     left: 0;
     z-index: 999;
@@ -169,4 +166,16 @@ input,
     left: 50%;
     transform:translateX(-50%) ;
     
+}
+.deleteIcon{
+    margin-top: 3px;
+    margin-left: 10px;
+    font-size: 28px;
+    color: #910202;
+   text-align: center;
+    position: absolute;
+}
+.buttons
+{   
+    padding-top: 20px;
 }
