--- a/src/pages/Statistics/StatisticsCities.less
+++ b/src/pages/Statistics/StatisticsCities.less
@@ -1,21 +1,25 @@
 .chart {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  width: 90%;
+  width: 800px;
+  height: 500px;
   margin-bottom: 10px;
   margin-top: 10px;
   margin-left: 20px;
   margin-right: auto;
-  padding: 10px;
+  padding: 20px;
 }
 
 .form {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  width: 90%;
+  width: 800px;
+  height: 500px;
   margin-bottom: 10px;
   margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
-  padding: 10px;
+  padding-top: 140px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .formAndChart {
@@ -30,6 +34,13 @@
   width: 100%;
   margin-bottom: 10px;
   margin-top: 10px;
-  padding: 10px;
+  padding: 20px;
   border-bottom: 1px solid #dee2e6;
+}
+.row {
+  align-self: center;
+  align-content: center;
+  align-items: center;
+  display: flex;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
