--- a/src/pages/Statistics/StatisticsCities.less
+++ b/src/pages/Statistics/StatisticsCities.less
@@ -1,29 +1,28 @@
 .chart {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  min-width: 600px;
   width: 800px;
   height: 500px;
   margin-bottom: 10px;
   margin-top: 10px;
   margin-left: 20px;
   margin-right: auto;
-  padding: 20px;
+  padding: 20px 20px 20px 20px;
 }
 
 .form {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  min-width: 600px;
   width: 800px;
   height: 500px;
   margin-bottom: 10px;
   margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 85px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 20px 20px 20px 20px;
 }
 
 .formAndChart {
-  width: 90%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -36,4 +35,35 @@
   margin-top: 10px;
   padding: 20px;
   border-bottom: 1px solid #dee2e6;
+}
+@media (max-width: 920px) {
+  .formAndChart {
+    display: inline;
+    box-shadow: none;
+  }
+}
+@media (max-width: 920px) {
+  .form {
+    padding: 0 15px;
+    display: inline;
+    box-shadow: none;
+  }
+}
+@media (max-width: 920px) {
+  .chart {
+    padding: 0 15px;
+    display: inline;
+    box-shadow: none;
+  }
+}
+
+@media (max-width: 1600px) {
+  .formAndChart {
+    display: inline;
+  }
+}
+@media (max-width: 1600px) {
+  .chart {
+    margin-left: auto;
+  }
 }
