Added color of row after click, cancel - 2 clicks

--- a/src/pages/Statistics/StatisticsCities.less
+++ b/src/pages/Statistics/StatisticsCities.less
@@ -9,7 +9,6 @@
   margin-right: auto;
   padding: 20px 20px 20px 20px;
 }
-
 .form {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   min-width: 600px;
@@ -19,9 +18,8 @@
   margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
-  padding: 20px 20px 20px 20px;
+  padding: 60px 20px 20px 20px;
 }
-
 .formAndChart {
   margin-left: auto;
   margin-right: auto;
@@ -35,6 +33,13 @@
   margin-top: 10px;
   padding: 20px;
   border-bottom: 1px solid #dee2e6;
+}
+.onClickRow {
+  background-color: rgb(240, 245, 240);
+  text-align: center;
+}
+.tableRow {
+  text-align: center;
 }
 @media (max-width: 920px) {
   .formAndChart {
@@ -56,7 +61,6 @@
     box-shadow: none;
   }
 }
-
 @media (max-width: 1600px) {
   .formAndChart {
     display: inline;
