--- a/src/pages/userPage/Approvers/Approvers.less
+++ b/src/pages/userPage/Approvers/Approvers.less
@@ -1,110 +1,99 @@
-.displayFlex{
-    display: flex;
+.displayFlex {
+  display: flex;
+  justify-content: center;
 }
 
-.avatarWrapper{
-    width:  calc(70% - 30px);
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin:0 40px 20px 0;
-    box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+.avatarWrapper {
+  min-width: 600px;
+  max-width: 750px;
+  min-height: 750px;
+  width: 750px;
+  height: 750px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  padding: 20px;
 }
-.approversCard{
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-
+.approversContent {
+  min-width: 600px;
+  max-width: 750px;
+  min-height: 750px;
+  width: 750px;
+  height: 750px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  padding: 20px;
 }
-.cardStyles{
-    margin: 15px;
-    width: 177px;
-    background: transparent;
+.approversCard {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
-.cardBody{
-    padding: 0;
+.cardStyles {
+  margin: 15px;
+  width: 177px;
+  background: transparent;
 }
-.cardButton{
-    inline-size: -webkit-fill-available;
-    margin-top: 7px;
-    color:#3c5438;
-    border-color: #3c5438;
+.cardBody {
+  padding: 0;
 }
-.cardP{
-    height: 25px;
+.cardButton {
+  inline-size: -webkit-fill-available;
+  margin-top: 7px;
+  color: #3c5438;
+  border-color: #3c5438;
 }
-.titleText{
-    text-align: center;
-    font-size: 20px;
-    font-weight: 700;
+.cardP {
+  height: 25px;
 }
-.titleText:hover{
-    text-decoration: underline;
+.titleText {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
 }
-.avatar{
-    height: 168px;
-    
+.titleText:hover {
+  text-decoration: underline;
 }
-.avatarEmpty{
-    margin:0 0 20px 0;
+.avatar {
+  height: 168px;
 }
-.avatarEmpty:hover{
-    box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+.avatarEmpty {
+  margin: 0 0 20px 0;
 }
-.approversContent{
-    width: calc(60% - 30px);
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin:0 40px 20px 0;
-    box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+.avatarEmpty:hover {
+  box-shadow: 0 7px 14px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
-
-.approversContent:hover{
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+.approversContent:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
-
 .line {
-    background: #3C5438;
-    width: 100%;
-    height: 10px;
-    margin-bottom: 5px;
+  background: #3c5438;
+  width: 100%;
+  height: 10px;
+  margin-bottom: 5px;
 }
 
-@media(max-width:767px){
-    .displayFlex{
-        flex-direction: column;
-    }
-    .approversContent{
-        width: 100%;
-        flex-direction: column;
-        text-align: center;
-    }
+@media (max-width: 1400px) {
+  .displayFlex {
+    display: block;
+    height: 100%;
+    width: 100%;
+  }
 }
-// @media(max-width: 1174px){
-//     .approversContent{
-//         margin-left: 0;
-//     }
-// }
-// @media(max-width: 1000px){
-  
-//     .approversCard{
-//         display: block;
-//     }
-// }
-// @media(max-width: 824px){
-//     .displayFlex{
-//         display: block;
-//     }
-// }
-// @media(max-width: 586px){
-//     .approversCard{
-//         display: block;
-//     }
-// }
+@media (max-width: 1400px) {
+  .avatarWrapper {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media (max-width: 1400px) {
+  .approversContent {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
