--- a/src/pages/userPage/Approvers/Approvers.less
+++ b/src/pages/userPage/Approvers/Approvers.less
@@ -77,8 +77,25 @@
   height: 10px;
   margin-bottom: 5px;
 }
-
 @media (max-width: 1320px) {
+  .displayFlex {
+    display: flex;
+    margin-left: 150px;
+    margin-right: 150px;
+    flex-direction: column;
+  }
+  .avatarWrapper {
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
+    min-width: 750px;
+    max-width: 750px;
+    min-height: 750px;
+    width: 750px;
+    height: 750px;
+  }
+}
+@media (max-width: 1120px) {
   .displayFlex {
     display: flex;
     margin-left: auto;
@@ -86,10 +103,13 @@
     flex-direction: column;
   }
   .avatarWrapper {
-    margin: 0px;
     margin-left: auto;
     margin-right: auto;
-    width: auto;
+    min-width: 600px;
+    max-width: 750px;
+    min-height: 750px;
+    width: 750px;
+    height: 750px;
   }
   .approversContent {
     margin-left: auto;
